Style the Play button a bit Apparently the time provided in requestanimationframe differs too much between chrome and firefox making boxes on the floor a bit harder to push correctly. Changed backed to this.performance()

--- a/src/i.css
+++ b/src/i.css
@@ -1,3 +1,1 @@
-body{background-color: black}
-#ui{z-index: 10;}
-canvas,button{color: #000;border: none;position: absolute;width:80%;height:80%;transform: translate(12%, 12%);}
+body{background-color:black}#ui{z-index:10;}canvas{border:none;position:absolute;width:85%;height:85%;transform:translate(8%,8%);}button{position:fixed;left:50%;top:50%;}
